--- a/strings/micropolisj/GuiStrings.properties
+++ b/strings/micropolisj/GuiStrings.properties
@@ -235,6 +235,12 @@ tool.QUERY.name                = QUERY
 tool.QUERY.icon                = /icqry.png
 tool.QUERY.selected_icon       = /icqryhi.png
 tool.QUERY.tip                 = Query Zone Status
+!Changed by Joe: Hospital_mod
+tool.HOSPITAL.name                = HOSPITAL
+tool.HOSPITAL.icon                = /ichosp.png
+tool.HOSPITAL.selected_icon       = /ichosphi.png
+tool.HOSPITAL.tip                 = HOSPITAL Zone Status
+
 
 tool.*.border                  = #bf7900
 tool.BULLDOZER.border          = #bf7900
@@ -252,7 +258,7 @@ tool.SEAPORT.border            = #0000ff
 tool.POWERPLANT.border         = #ffff00
 tool.NUCLEAR.border            = #ffff00
 tool.AIRPORT.border            = #bf7900
-
+tool.HOSPITAL.border			  = #bf7900
 tool.*.bgcolor                 = rgba(0,0,0,0)
 tool.BULLDOZER.bgcolor         = rgba(0,0,0,0)
 tool.WIRE.bgcolor              = rgba(0,0,0,0.375)
@@ -269,7 +275,7 @@ tool.STADIUM.bgcolor           = rgba(93,93,93,0.375)
 tool.SEAPORT.bgcolor           = rgba(93,93,93,0.375)
 tool.AIRPORT.bgcolor           = rgba(93,93,93,0.375)
 tool.PARK.bgcolor              = rgba(0,255,0,0.375)
-
+tool.HOSPITAL.bgcolor		  = rgba(0,255,0,0.375)
 !
 ! The Graphs pane (accessible through Window -> Graphs)
 !
