change hospital label

--- a/strings/micropolisj/StatusMessages.properties
+++ b/strings/micropolisj/StatusMessages.properties
@@ -33,7 +33,8 @@ zone.23 =
 zone.24 = Steelers 38  Bears 3
 zone.25 = 
 zone.26 = Ur 238
-zone.27 = 
+!Changed by Joe: Add Hospital
+zone.27 = Hospital
 
 ! population density
 status.1 = Low
